# AlphaConnect4

./: .gitignore  .pylintrc  README.md  dev_requirements.txt  game.py  generate_training_data.py  pyproject.toml  run_game.py  setup.py  tournament.py
alphaconnect4/agents/: __init__.py  base_agent.py  mcts_agent.py  minimax_agent.py  neural_mcts_agent.py
alphaconnect4/constants/: constants.py
alphaconnect4/engines/: mcts.py  minimax_engine.py  neural_mcts.py
alphaconnect4/interfaces/: board.py  mcts_interface.py  naive_nn.py  neural_interface.py  transformer_nn.py
alphaconnect4/interfaces/connect4/: __init__.py  connect4_board.py  connect4_mcts_interface.py  connect4_minimax_engine.py  connect4_neural_interface.py  connect4_nn.py  constants.py
alphaconnect4/interfaces/quarto/: __init__.py  constants.py  quarto_board.py  quarto_mcts_interface.py
api/: run_flask.py  run_flask_gunicorn.py
elo/: elo_rating.py
engines/: base_agent.py  mcts.py  mcts_agent.py  mcts_interface.py  minimax_agent.py  minimax_engine.py  neural_mcts.py  neural_mcts_agent.py
gameplay/: board.py  constants.py  game.py  parameters.py  visual_engine.py
gameplay/connect4/: game.py  visual_engine.py
gameplay/quarto/: game.py  visual_engine.py
minimax/: minimax_engine.py
neural_evaluator/: custom_loss.py  dataset.py  naive_nn.py  neural_interface.py  stub_nn.py  trainer.py  training_script.py
neural_scripts/: dataset.py  trainer.py  training_script.py
tests/test_api/: test_run_flask_command.py
